--- a/src/App.css
+++ b/src/App.css
@@ -487,7 +487,7 @@ padding: 0px;
     width: ;
     margin-top: 2px;
     
-    font-family: 'Barlow Condensed', sans-serif;
+    font-family: 'Barlow Condensed';
     font-style: normal;
     font-weight: bold;
     font-size: 120px;
