--- a/src/App.css
+++ b/src/App.css
@@ -76,19 +76,18 @@ margin: 0px;
    }
  }
  .sec1{
-   width: 1520px!important;
+   width: 100vw!important;
    padding: 0px;
    margin: 0px;
-   text-align: center;
+   text-align: center!important;
  }
 
  .contenedor{
    margin: 0px;
    padding: 0px!important;
    
-  position: relative;  
-  width: 1920px!important;
-    height: 1000px;
+  
+  
     overflow: hidden;
 
  }
@@ -188,12 +187,12 @@ filter: drop-shadow(0px 9px 6px rgba(0, 0, 0, 1));
 
 .videosun{
   
-  position: relative; 
+ 
   
   padding: 0px;
   justify-content: center;
   margin: 0px!important;    
-  overflow: visible;
+  overflow: hidden;
     
 }
 .videosunrep{
@@ -211,7 +210,7 @@ filter: drop-shadow(0px 9px 6px rgba(0, 0, 0, 1));
 /*--------------------------------------SECCION TRES HOME-----------------------------------*/
 .fondosec3{
   
-display: flex;
+
   
   justify-content: center;
   background-image: url("./images/NUMERO1.jpg")!important;
@@ -220,7 +219,7 @@ display: flex;
    background-repeat: no-repeat;    
     position: relative;
     overflow: visible;
-    width: 1515px;
+    width: 100vw;
     height: 1600px;
     
    
@@ -407,12 +406,12 @@ padding: 0px;
  background:white;
  background-size:cover;
  background-position:center;
- padding: 0px;
+ padding: 0px!important;
  margin-bottom: 0px!important;
   }
   .tecno img{
-  display: flex;
-  position: relative;
+ 
+  
  
   
   width: 100vw;
@@ -474,7 +473,7 @@ padding: 0px;
   background-color: white!important;
   
   
-  justify-content: center;
+  justify-content: center!important;
   width: 100vw;
   
   
@@ -482,9 +481,9 @@ padding: 0px;
 .titulo6{
   filter: drop-shadow(7px 3px 8px rgba(0, 0, 0, 0.851));
     height: 200px;
-    position: relative;
     
-    width: ;
+    
+    
     margin-top: 2px;
     
     font-family: 'Barlow Condensed';
@@ -505,21 +504,16 @@ padding: 0px;
 }
   
 .radiofoc{
-  display: flex;
-  position: absolute;
   
-  color:orange;
 }
 .radiofon-sym{
-  display: flex;
-  position: relative;
-
+  
 }
 .fap-btn2{
   
   position: relative;
-  bottom: -60px;
-  left: 32px;
+  bottom: -67px;
+  left: 39px;
   overflow: visible;
   color:#025889!important;
   border: 3px solid #fff!important;
@@ -535,8 +529,8 @@ padding: 0px;
  .fap-btn3{
    
   position: relative;
-  bottom: -315px!important;
-  left:-21px;
+  bottom: -326px!important;
+  left:-15px;
   overflow: visible;
   color:#025889!important;
   border: 3px solid #fff!important;
@@ -550,8 +544,8 @@ padding: 0px;
  }
  .fap-btn4{
   position: relative;
-  bottom: -577px!important;
-  left: -9px;
+  bottom: -594px!important;
+  left: -5px;
   overflow: visible;
   color:#025889!important;
   border: 3px solid #fff!important;
@@ -886,7 +880,7 @@ white-space: normal;
 /*---------------------------------------------------Newlester----------------------------------------*/
 .Newlester-con{
   display: flex;
-  
+  padding: 0px!important;
   background-color:#CEDEEE!important;
 justify-content: center!important;
 }
@@ -928,7 +922,7 @@ font-family: 'Josefin Sans', sans-serif;
 
 /*------------------------------fotttttttttteeeeeeeeeeeeeeeeeeeeeeeeeee----------------------------------------------*/
 .con-footer{
-  position: relative!important;
+  width: 100vw;
   display: flex!important;
   justify-content: center!important;
   
@@ -953,6 +947,7 @@ text-align: center;
   border-top: #009DC8 solid 10px;
   color: white!important;
   text-align: center;
+  padding: 0px!important;
   font-family: 'Josefin Sans';
 }
 /*-------------------------------------------- PESTAÑA ACERCA DE-----------------------------------------------------------
