pdf resposivo completo y video

--- a/src/App.css
+++ b/src/App.css
@@ -488,94 +488,6 @@ padding: 0px;
   padding: 0px;
   
 }
-.loadercontainer{
-  
-  width: 100vw!important;
-  height: 100vh!important;
-}
-.control-panel{
-  font-size: 1.6vw;
-  background-color: white;
-  height: 4vw;
-  line-height: 1!important;
-  color: black;
-  white-space: normal ;
-  margin-top: 10vw!important;
-
-  border-radius: 10px;
-  
-}
-.clickable{
-  cursor: pointer;
-}
-.disabled{
-cursor: not-allowed;
-color: lightgray;
-}
-.input-pdf{
-  position: relative;
-  top: -.5vw;
-}
-.pdfcontainer{
-  display: flex;
-  position: relative;
-  
-  justify-content: center!important;
-  text-align: center;
-  
-  align-items: center!important;
-  
-}
-.pdfcontainer canvas{
-  
-  position: relative;
-  width: 70vw!important;
-  text-align: center;
-  height: 100vh;
-  justify-content: center!important;
-  margin-top: 5vw;
-  align-items: center;
-  
-}
-#loader{
-  position: fixed !important;;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(155, 155, 155, 0.7);
-}
-
-
-.fondopdf{
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-color: rgb(155, 155, 155, 0.7);
-}
-
-.Logo-loader{
-  height: 30vmin;
-  pointer-events: none;  
-}
- @media(prefers-reduced-motion: no-preference){
-   .Logo-loader{
-     animation: Logo-loader-spin infinite 1s linear;
-   }
- }
- @keyframes Logo-loader-spin{
-   from{
-     transform: rotate(0deg);
-   }to{
-     transform: rotate(360deg) ;
-   }
- }
-.viewercontainer{
-  position: relative;
-top: 15vw!important;
-width: 100vw!important;
-height: 100vh!important;
-}
 
 
 .walp-img{
@@ -1594,6 +1506,7 @@ margin:5vw;
   background-image: url("./images/fondoregistro.svg")!important;
   color: white;
   text-align: center; 
+  
    justify-content: center!important;
 
  }
@@ -1601,6 +1514,7 @@ margin:5vw;
  flex-wrap: wrap;
    justify-content:center!important;
    text-align: center!important;
+  
  }
  .gmail{
    
@@ -1618,6 +1532,7 @@ font-family:'Lato';
   font-family:'Lato';
   font-size: 2vw;
   font-weight:bold!important;
+  z-index: 2000!important;
 }
 .form-regi::placeholder{
   color: #ffffffb3!important;
@@ -2262,6 +2177,7 @@ margin-top: -8vh!important;
     background-position:center!important;  
   }
   .videosunrep{
+  height: 50vh!important;
     
   }
   .hometext1{
@@ -2447,6 +2363,7 @@ resize: none;
 }
 
 @media only screen and (max-width: 777px) {
+
   .wrapper:after{
       content: "EQUIPO SUNSHINE";
       background-color: rgba(2, 88, 137, 0.6);
@@ -2495,6 +2412,30 @@ resize: none;
 }
 
 @media only screen and (max-width: 363px) {
+
+
+
+  .fap-btn2{
+    top: 40vw!important;
+    left: -2vw;
+  }
+  .textsyn{
+    top: 115vw!important;
+    left: -27vw;
+  }
+  .mintext{
+    top: 115vw;
+    margin-left: 2vw!important;
+  }
+  .fap-btn4{
+    top: 150vw!important;
+  }
+.textsyn3{
+top: 165vw;
+}
+  .mintext3{
+top: 100vw;
+  }
   .wrapper:after{
       content: "EQUIPO SUNSHINE";
       background-color: rgba(2, 88, 137, 0.6);
