--- a/src/App.css
+++ b/src/App.css
@@ -2377,7 +2377,40 @@ resize: none;
       font-size: 35px;
       font-weight: bold;
   }
+  /*--------------------------------botonoes de watssappp------------------------------------*/
+  .whatsapp-img{
+  
+  
+  
+    position:fixed;
+    width:90px;
+    height:90px;
+    bottom:30px;
+    right:30px;
+    
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:35px;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    z-index:1;
+    transition: all 300ms ease;
+  
+  }
+  .tel-img{
+    
+    width:90px;
+    height: 90px;
+    bottom: 160px;
+    right:30px;
+   
+   
+  }
+  .whats-content{
+    bottom:30px;
+  }
 }
+
 
 @media only screen and (max-width: 555px) {
   .wrapper:after{
@@ -2463,3 +2496,4 @@ top: 100vw;
       color: #033462;
   }
 }
+ 
